--- a/componentes/login/login.css
+++ b/componentes/login/login.css
@@ -2,140 +2,127 @@
     width: 100%;
     max-width: 120rem;
     height: 60rem;
-    margin: auto;
-    margin-top: 3%;
     border: 1px solid black;
+    margin: auto;
+    margin-top: 5%;
 
     display: grid;
-    grid-template-columns: 50rem auto;
-   
+    grid-template-columns: 60rem auto;
+    grid-template-rows: 60rem;
+    gap: 1rem;
 }
 
 .box-login .formulario{
-    height: 70%;
-    width: 100%;
+    height: 100%;
+    padding: 7rem 8rem;
+
     display: grid;
-    grid-template-columns: repeat(8,1fr);
-    grid-template-rows: repeat(8,1fr);
-
-    gap: 1rem;
-
-    
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 1fr);
 }
-
-.box-login .logo{
+.box-login .log{
     grid-column: 1/9;
+    font-size: 1.5rem;
+    font-weight: 00;
 }
 .box-login h2{
     grid-column: 1/9;
+    color: rgb(123, 121, 121);
 }
 .box-login .btn-facebook{
     grid-column: 1/4;
-    border: solid blue;
-    height: 30%;
-    width: 70%;
-    border-radius: 5px;
-    background-color: blue;
+    background-color: rgb(7, 7, 209);
     color: white;
+    height: 3rem;
+    width: 15rem;
+    font-size: 1.2rem;
+    align-self: center;
+    justify-content: center;
+    align-items: center;
 }
-
+.box-login .btn-facebook img{
+    width: 15px;
+    height: 20px;
+    
+}
 .box-login .btn-xing{
-    grid-column: 4/8;
-    border: solid black;
-    height: 30%;
-    width: 35%;
-    border-radius: 5px;
+    grid-column: 5/8;
     background-color: black;
+
     color: white;
+    height: 3rem;
+    width: 15rem;
+    font-size: 1.2rem;
+    align-self: center;
+    justify-content: center;
+    align-items: center;
+}
+.box-login .btn-xing img{
+    width: 15px;
+    height: 20px;
 }
 .box-login span{
     grid-column: 1/9;
-    grid-row: 4/9;
-    padding: 20px;
-    margin-top: -80px;
+    justify-self: center;
+    align-self: center;
+    font-size: 1.5rem;
 }
+
 #login{
-    grid-column: 1/6;
-    grid-row: 4/5;
+    grid-column: 1/9;
 }
+
 #login label{
     color: gray;
+
     display: flex;
     flex-direction: column;
-}
-.yo{
-    grid-row: 5/87;
 }
 #login input{
     height: 4rem;
     border: none;
     outline: none;
+    border-bottom: 2px solid rgb(5, 65, 38);
     color: black;
-    border-bottom: 2px solid blueviolet;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 600;
-    
 }
 #login .opciones{
-    display: flex;    
-}
-.nose{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
 }
-#login .opciones label {
-    font-size: 1.3rem;
-    display: flex; 
-    margin-top: 10px; 
-    gap: 1rem; /* Ajusta el espacio entre el texto y el input */
-}
+#login .opciones label{
+    font-size: 1.5rem;
 
-#login .opciones label input {
-    width: 1rem;
-    
-}
-
-#login .opciones .remember-forgot {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
+    align-items: center;
 }
-.actions {
-    display: flex;
-    justify-content: space-between;
+#login .opciones label input{
+    width: 2rem;
 }
+#login .botones{
+    height: 0.5rem;
+    padding: 1rem;
+}
+#login .botones button{
+    padding: 2rem;
+    width: 12rem;
+    height: 4rem;
+    border-radius: 0.5rem;
+    color:black;
+    font-weight: 600;
+    justify-content: space-around;
 
-.actions .login-btn,
-.actions .signup-btn {
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 4px;
-    font-size: 1rem;
-    cursor: pointer;
 }
-
-.actions .login-btn {
-    background: linear-gradient(to right, #a270e3, #fdb99b);
-    border: none;
-    border-radius: 2px;
-    padding: 0.5rem 1.5rem;
-    font-size: 1rem;
-    color: #fff;
-    cursor: pointer;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: background 0.3s ease;
-}
-
-.actions .signup-btn {
-    background: #fff;
-    border: 1px solid #ccc;
-    color: #666;
+#login .botones .btn-login{
+    background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%); 
 }
 .banner{
-   height: 60rem;
+    height: 59.9rem;
 }
-.banner img{
+.banner img {
     width: 100%;
     height: 100%;
     object-fit: cover;
